# bez_durakov_parser

./: .gitignore  BdGame.py  Makefile  README.md  alembic.ini  alembic_wrapper.py  bd_game.py  clear_database.py  config.py  config.toml  db.py  db_helpers.py  docker-compose.yml  parse_data.py  pyproject.toml  reqs.txt  xlsm_fetch.py
doc/: ORM.md  bd_game.md
examples/: four_buckets.py
migrations/: env.py
migrations/mysql/: env.py
migrations/mysql/versions/: 50068160f559_initial_migration_for_mysql.py  a1b2c3d4e5f6_change_team_name_collation_to_binary.py
migrations/sqlite/: env.py
migrations/sqlite/versions/: 83570ad125de_shorting_team_name_to_support_mysql_key_.py  e6450d258c71_initial.py
migrations/versions/: 1ec78e9e5d04_create_team_game_scores_view.py
xlsm_archive/: Таблица (10).xlsm  Таблица (11).xlsm  Таблица (12).xlsm  Таблица (13).xlsm  Таблица (14).xlsm  Таблица (15).xlsm  Таблица (16).xlsm  Таблица (17).xlsm  Таблица (18).xlsm  Таблица (19).xlsm  Таблица (2).xlsm  Таблица (20).xlsm  Таблица (21).xlsm  Таблица (22).xlsm  Таблица (23).xlsm  Таблица (24).xlsm  Таблица (25).xlsm  Таблица (26).xlsm  Таблица (27).xlsm  Таблица (3).xlsm  Таблица (4).xlsm  Таблица (5).xlsm  Таблица (6).xlsm  Таблица (7).xlsm  Таблица (8).xlsm  Таблица (9).xlsm  Таблица.xlsm  Таблица1.xlsm
xlsm_fetch/: __init__.py  api_fetcher.py  base_fetcher.py  gdown_fetcher.py  selenium_fetcher.py
