[project]
name = "BD_parser"
version = "0.1.0"
description = "Парсер результатов серии игр \"Без дураков. Белград.\""
authors = [
    { name="Korridzy", email="korridzy.pub@gmail.com" }
]
requires-python = ">=3.11"

dependencies = [
    "matplotlib (>=3.10.3,<4.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pymysql[rsa] (>=1.1.1,<2.0.0)",
]

[tool.poetry]
package-mode = false